fixed jwt token settings

--- a/Stocky.Client/Components/DialogWindows/OrderDialogs/CreateOrderDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/OrderDialogs/CreateOrderDialog.razor
@@ -66,6 +66,7 @@
             var createPayload = new Order
             {
                 UserId = UserId,
+                EmployeeId = AuthService.EmployeeId,
                 TotalAmount = _amount,
                 Method = _selectedPaymentMethod
             };
