--- a/Stocky.Client/Components/DialogWindows/PocketDialogs/PocketsUserPaginationDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/PocketDialogs/PocketsUserPaginationDialog.razor
@@ -113,7 +113,7 @@ else
         var options = new DialogOptions
         {
             CloseButton = true,
-            MaxWidth = MaxWidth.Medium,
+            MaxWidth = MaxWidth.Small,
             FullWidth = true
         };
 
