--- a/Stocky.Client/Components/DialogWindows/PocketItemDialogs/PocketItemsDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/PocketItemDialogs/PocketItemsDialog.razor
@@ -41,7 +41,7 @@
                         <MudButton Color="Color.Error"
                                    Variant="Variant.Outlined"
                                    Size="Size.Small"
-                                   OnClick="@(() => ConfirmDelete(context.Id))">
+                                   OnClick="@(() => ConfirmDelete(context.ProductBarCode,context.Id))">
                             <MudIcon Icon="@Icons.Material.Filled.Delete" />
                         </MudButton>
                     </MudTd>
@@ -81,11 +81,11 @@
     {
         await LoadPocketItems();
     }
-    private async Task ConfirmDelete(int id)
+    private async Task ConfirmDelete(string name,int id)
     {
         bool? result = await DialogService.ShowMessageBox(
             title: "Подтверждение",
-            markupMessage: (MarkupString)$"Вы уверены, что хотите удалить товар с ID <b>{id}</b>?",
+            markupMessage: (MarkupString)$"Вы уверены, что хотите удалить товар <b>{name}</b>?",
             yesText: "Удалить", cancelText: "Отмена", options: new DialogOptions { CloseButton = true });
 
         if (result == true)
