feat: update navigation menu label to Russian for product addition

--- a/Stocky.Client/Components/Layout/NavMenu.razor
+++ b/Stocky.Client/Components/Layout/NavMenu.razor
@@ -40,7 +40,7 @@
     else if (AuthService.IsAdder)
     {
         <MudNavLink Href="adding-product" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.PlaylistAdd">
-            Report Page
+            Добавление продукта
         </MudNavLink>
     }
 
